eks-terra/test-app-backup-final.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"argoproj.io/v1alpha1","kind":"Application","metadata":{"annotations":{},"creationTimestamp":"2025-10-03T17:34:51Z","generation":57,"name":"test-app","namespace":"argocd","resourceVersion":"2441702","uid":"a9091e48-8e8a-4bd8-b53d-99fc1e724a7a"},"spec":{"destination":{"namespace":"default","server":"https://kubernetes.default.svc"},"project":"default","source":{"path":"repo-manifests/kuber","repoURL":"https://github.com/Pavlovskyi-Andrii/Stepproject5.git","targetRevision":"mai [...]
  creationTimestamp: "2025-10-03T20:25:10Z"
  generation: 16
  name: test-app
  namespace: argocd
  resourceVersion: "2450013"
  uid: e2ade7e4-42b8-4fd9-abae-4b9e553c8940
spec:
  destination:
    namespace: default
    server: https://kubernetes.default.svc
  project: default
  source:
    path: repo-manifests/kuber
    repoURL: https://github.com/Pavlovskyi-Andrii/Stepproject5.git
    targetRevision: main
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    retry:
      backoff:
        duration: 5s
        factor: 2
        maxDuration: 3m
      limit: 5
    syncOptions:
    - CreateNamespace=true
status:
  controllerNamespace: argocd
  health:
    status: Healthy
  reconciledAt: "2025-10-03T20:57:48Z"
  resources:
  - health:
      status: Healthy
    kind: Service
    name: test-app-service
    namespace: default
    status: Synced
    version: v1
  - group: apps
    health:
      status: Healthy
    kind: Deployment
    name: test-app
    namespace: default
    status: Synced
    version: v1
  - group: networking.k8s.io
    health:
      status: Healthy
    kind: Ingress
    name: test-app-ingress
    namespace: default
    status: Synced
    version: v1
  sourceType: Directory
  summary:
    externalURLs:
    - http://app.student1.devops8.test-danit.com/
    images:
    - devasher/test-app:latest
  sync:
    comparedTo:
      destination:
        namespace: default
        server: https://kubernetes.default.svc
      source:
        path: repo-manifests/kuber
        repoURL: https://github.com/Pavlovskyi-Andrii/Stepproject5.git
        targetRevision: main
    revision: 73abe0f2e2cf09e5593c629831b3c0194f6c1789
    status: Synced
